# Faceflow

./: .gitignore  README.md
frontend/web/: README.md  next.config.mjs  package.json
frontend/web/app/: globals.css  layout.tsx  page.tsx
frontend/web/components/: ClusterList.tsx  UploadForm.tsx
services/: __init__.py
services/api/: README.md  pyproject.toml
services/api/app/: __init__.py  main.py  models.py  storage.py
services/api/tests/: test_api.py
services/clustering/: __init__.py  simple_cluster.py
services/exporter/: README.md
