[project]
name = "faceflow-api"
version = "0.1.0"
description = "Faceflow API service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.6",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
